core(pgk) change licenser

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "material"
   ],
   "author": "Paul Gschwendtner",
-  "license": "MIT",
+  "license": "Apache",
   "bugs": {
     "url": "https://github.com/Werdenfels-Gymnasium/WG-Hilfe/issues"
   },
