--- a/bower.json
+++ b/bower.json
@@ -23,11 +23,15 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.7",
-    "angular-material": "~0.11.4",
+    "angular": "~1.5.0",
+    "angular-material": "~1.0.5",
     "angular-aria": "~1.4.7",
     "angular-animate": "~1.4.7",
     "angular-route": "~1.4.7",
-    "angular-marked": "~1.0.0"
+    "angular-marked": "~1.0.0",
+    "angular-messages": "1.5.0"
+  },
+  "resolutions": {
+    "angular": "1.5.0"
   }
 }
