--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ sudo: false
 language: node_js
 node_js:
   - '4.2.3'
+cache:
+  directories:
+    - node_modules
 branches:
   only:
     - master
@@ -9,6 +12,7 @@ before_script:
   - chmod a+x ./scripts/deploy.sh
   - git config --global user.email "gschwepa@werdenfels-gymnasium.de"
   - git config --global user.name "DevVersion's Commit Bot"
-
 script:
-  - '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && ./scripts/deploy.sh'
+  - 'gulp build'
+after_success:
+  - './scripts/deploy.sh'
