--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: true
 language: node_js
 node_js:
   - '4.2.3'
@@ -12,6 +12,7 @@ before_script:
   - chmod a+x ./scripts/deploy.sh
   - git config --global user.email "gschwepa@werdenfels-gymnasium.de"
   - git config --global user.name "DevVersion's Commit Bot"
+  - npm install bower -g
   - bower install
 script:
   - 'gulp build'
