--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ branches:
 before_script:
   - chmod a+x ./scripts/deploy.sh
   - git config --global user.email "gschwepa@werdenfels-gymnasium.de"
-  - git config --global user.name "DevVersion's Commit Bot"
+  - git config --global user.name "DevVersion's Commit Donator"
   - npm install bower -g
   - bower install
 script:
