--- a/bower.json
+++ b/bower.json
@@ -23,15 +23,12 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.5.0",
-    "angular-material": "~1.0.5",
-    "angular-aria": "~1.4.7",
-    "angular-animate": "~1.4.7",
-    "angular-route": "~1.4.7",
-    "angular-marked": "~1.0.0",
-    "angular-messages": "1.5.0"
-  },
-  "resolutions": {
-    "angular": "1.5.0"
+    "angular": "^1.5.3",
+    "angular-material": "^1.0.7",
+    "angular-aria": "^1.5.3",
+    "angular-animate": "^1.5.3",
+    "angular-route": "^1.5.3",
+    "angular-marked": "^1.0.1",
+    "angular-messages": "^1.5.3"
   }
 }
