--- a/package.json
+++ b/package.json
@@ -17,20 +17,20 @@
     "material"
   ],
   "author": "Paul Gschwendtner",
-  "license": "Apache",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Werdenfels-Gymnasium/WG-Hilfe/issues"
   },
   "homepage": "https://github.com/Werdenfels-Gymnasium/WG-Hilfe#readme",
   "dependencies": {
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
-    "gulp-license": "^1.0.0",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-minify-html": "^1.0.4",
+    "gulp-license": "^1.1.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-minify-html": "^1.0.6",
     "gulp-print": "^2.0.1",
-    "gulp-sass": "^2.1.0",
+    "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.1"
   }
 }
