--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: true
+sudo: false
 language: node_js
 node_js:
   - '4.2.3'
@@ -11,10 +11,9 @@ branches:
 before_script:
   - chmod a+x ./scripts/deploy.sh
   - git config --global user.email "gschwepa@werdenfels-gymnasium.de"
-  - git config --global user.name "DevVersion's Commit Donator"
-  - npm install bower -g
-  - bower install
+  - git config --global user.name "DevVersion-Bot"
+  - npm install
 script:
-  - 'gulp build'
+  - gulp build
 after_success:
   - './scripts/deploy.sh'
