--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "wg-hilfe",
-  "version": "1.0.0",
+  "version": "1.0.0-rc2",
   "description": "Werdenfels Gymnasium Hilfe",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp build",
+    "postinstall": "bower install"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   },
   "homepage": "https://github.com/Werdenfels-Gymnasium/WG-Hilfe#readme",
   "dependencies": {
+    "bower": "^1.7.9",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
