--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,7 @@
   ],
   "dependencies": {
     "angular": "^1.5.3",
-    "angular-material": "1.1.0-rc4",
+    "angular-material": "1.1.1",
     "angular-aria": "^1.5.3",
     "angular-animate": "^1.5.3",
     "angular-route": "^1.5.3",
