--- a/bower.json
+++ b/bower.json
@@ -25,12 +25,12 @@
     "bower_components"
   ],
   "dependencies": {
-    "angular": "^1.5.3",
+    "angular": "1.5.9",
     "angular-material": "1.1.1",
-    "angular-aria": "^1.5.3",
-    "angular-animate": "^1.5.3",
-    "angular-route": "^1.5.3",
+    "angular-aria": "1.5.9",
+    "angular-animate": "1.5.9",
+    "angular-route": "1.5.9",
     "angular-marked": "^1.0.1",
-    "angular-messages": "^1.5.3"
+    "angular-messages": "1.5.9"
   }
 }
