Add gimp docks entry

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "WG-Hilfe",
+  "name": "wg-help",
   "homepage": "https://github.com/Werdenfels-Gymnasium/WG-Hilfe",
   "authors": [
     "DevVersion <paulgschwendtner@me.com>",
