--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "angular": "~1.6.9",
     "angular-animate": "~1.6.9",
     "angular-aria": "~1.6.9",
-    "angular-marked": "~1.6.9",
+    "angular-marked": "^1.2.2",
     "angular-material": "^1.1.9",
     "angular-messages": "~1.6.9",
     "angular-route": "~1.7.2",
