--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-license": "^1.1.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
+    "gulp-print": "^5.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.0"
   }
